--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </span>
                     <span class="caption">About</span>
                 </a></li>
-            <li><a href="mailto:panagiotis-2015@outlook.com.gr" id="contact-nav" aria-label="Contact me - Navigation bar">
+            <li><a href="mailto:mail@sarris.dev" id="contact-nav" aria-label="Contact me - Navigation bar">
                     <span class="material-symbols-rounded">
                         chat_bubble
                     </span>
