--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,200" />
     <!-- favicon -->
     <link rel="icon" href="assets/img/logo-mini.png" type="image/png">
+    <link href="https://www.sarris.dev/assets/img/logo-mini.png" rel="apple-touch-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://kit.fontawesome.com/97543652cd.js" crossorigin="anonymous"></script>
