--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <img class="item"
                             src="https://skillicons.dev/icons?i=arch,linux,bash,windows,apple,python,figma,github,obsidian,photoshop,premiere&theme=dark&perline=15" alt="My skills" />
                     </a>
-<a href="https://git.io/streak-stats"><img src="https://gh-stats-flame.vercel.app/api?username=panagiotissarr&show_icons=true&count_private=true&theme=transparent&hide_border=true&hide_title=true" alt="GitHub Streak" /></a>  
+<a href="https://git.io/streak-stats"><img src="https://github-readme-stats.vercel.app/api?username=panagiotissarr&show_icons=true&count_private=true&theme=transparent&hide_border=true&hide_title=true" alt="GitHub Streak" /></a>  
 
             </div>
         </section>
